force-app/main/default/objects/Class__c/fields/Departments__c.field-meta.xml
<CustomField>
    <fullName>Departments__c</fullName>
    <label>Departments</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>B.sc(CS)</fullName>
            </value>
            <value>
                <fullName>B.sc(IT)</fullName>
            </value>
            <value>
                <fullName>BCA</fullName>
            </value>
            <value>
                <fullName>B.sc(Maths)</fullName>
            </value>
            <value>
                <fullName>B.sc(Chemistry)</fullName>
            </value>
            <value>
                <fullName>B.sc(Physics)</fullName>
            </value>
            <value>
                <fullName>B.com(CA)</fullName>
            </value>
            <value>
                <fullName>BBA</fullName>
            </value>
            <value>
                <fullName>EEE</fullName>
            </value>
            <value>
                <fullName>CSE</fullName>
            </value>
            <value>
                <fullName>Civil</fullName>
            </value>
            <value>
                <fullName>Mech</fullName>
            </value>
            <value>
                <fullName>MBBS</fullName>
            </value>
            <value>
                <fullName>BDS</fullName>
            </value>
            <value>
                <fullName>BUMS</fullName>
            </value>
            <value>
                <fullName>BAMS</fullName>
            </value>
            <value>
                <fullName>B.Pharm</fullName>
                <isActive>false</isActive>
                <label>B.Pharm</label>
            </value>
            <value>
                <fullName>M.Pharm</fullName>
                <isActive>false</isActive>
                <label>M.Pharm</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>